// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HKButton with custom title 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title="a custom title"
  type="button"
  value="a custom title"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton with custom value 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value="a custom value"
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger regular-enabled-normal 1`] = `
<button
  className="hk-button--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-danger"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/danger small-enabled-normal 1`] = `
<button
  className="hk-button-sm--danger"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info regular-enabled-normal 1`] = `
<button
  className="hk-button--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-info"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/info small-enabled-normal 1`] = `
<button
  className="hk-button-sm--info"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary regular-enabled-normal 1`] = `
<button
  className="hk-button--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-primary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/primary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--primary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary regular-enabled-normal 1`] = `
<button
  className="hk-button--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-secondary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/secondary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--secondary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary regular-enabled-normal 1`] = `
<button
  className="hk-button--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-tertiary"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/tertiary small-enabled-normal 1`] = `
<button
  className="hk-button-sm--tertiary"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-async 1`] = `
<button
  className="hk-button--async"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-disabled-normal 1`] = `
<button
  className="hk-button--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning regular-enabled-normal 1`] = `
<button
  className="hk-button--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-disabled-normal 1`] = `
<button
  className="hk-button-sm--disabled-warning"
  disabled={true}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKButton/warning small-enabled-normal 1`] = `
<button
  className="hk-button-sm--warning"
  disabled={false}
  onClick={[Function]}
  title={undefined}
  type="button"
  value={undefined}
>
   
  Click Me
   
</button>
`;

exports[`Storyshots HKModal default 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
</div>
`;

exports[`Storyshots HKModal default initially open 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
  <div
    className="flex flex-column items-center justify-center"
    data-modal="true"
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .2)",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "transition": "background 250ms ease-in-out, opacity 250ms ease-in-out",
        "zIndex": 9999,
      }
    }
  >
    <div
      className="bg-white shadow-outer-1 relative w-100 mw7 center br1"
      style={Object {}}
    >
      <div
        className="bg-near-white dark-gray bb b--light-silver f4 flex items-center justify-center br--top br2"
      >
        <div
          className="hk-modal-header pa4 bg-near-white"
        >
          <div>
            header text
          </div>
        </div>
        <div
          className="right-1 h-100 absolute pointer"
          onClick={[Function]}
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 fill-dark-gray o-50 hover-o-100 h-100 v-mid"
            style={undefined}
          >
            <use
              xlinkHref="#delete-16"
            />
          </svg>
        </div>
      </div>
      <div
        className=""
      >
        <div
          className="pa6"
        >
          with some important details here below
        </div>
      </div>
      <div
        className="bt b--light-silver w-100 pa3 tr"
      >
        <button
          className="hk-button--secondary"
          disabled={false}
          onClick={[Function]}
          title={undefined}
          type="button"
          value={undefined}
        >
           
          Submit
           
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots HKModal flyout 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
</div>
`;

exports[`Storyshots HKModal flyout initially open 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    show it
  </button>
  <div
    className="flex flex-column"
    data-modal="true"
    onClick={[Function]}
    style={
      Object {
        "background": "rgba(0, 0, 0, .2)",
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "fixed",
        "right": 0,
        "top": 0,
        "transition": "background 250ms ease-in-out, opacity 250ms ease-in-out",
        "zIndex": 9999,
      }
    }
  >
    <div
      className="bg-white shadow-outer-1 relative fixed right-0 w7 h-100 flex flex-column"
      style={
        Object {
          "transform": "translateX(0)",
          "transition": "transform 250ms ease-in-out",
        }
      }
    >
      <div
        className="bg-near-white dark-gray bb b--light-silver f4 flex items-center justify-center br--top br2"
      >
        <div
          className="hk-modal-header pa4 bg-near-white"
        >
          <div>
            header text
          </div>
        </div>
        <div
          className="right-1 h-100 absolute pointer"
          onClick={[Function]}
        >
          <svg
            className="malibu-fill-gradient-dark-gray icon malibu-icon h1 w1 fill-dark-gray o-50 hover-o-100 h-100 v-mid"
            style={undefined}
          >
            <use
              xlinkHref="#delete-16"
            />
          </svg>
        </div>
      </div>
      <div
        className="flex-auto"
      >
        <div
          className="pa6"
        >
          with some important details here below
        </div>
      </div>
      <div
        className="bt b--light-silver w-100 pa3 tr"
      >
        <button
          className="hk-button--secondary"
          disabled={false}
          onClick={[Function]}
          title={undefined}
          type="button"
          value={undefined}
        >
           
          Submit
           
        </button>
      </div>
    </div>
  </div>
</div>
`;
